--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -251,7 +251,7 @@
     <!-- ======= Team Section ======= -->
     <section id="team" class="team section-bg">
         <div class="container" data-aos="fade-up">
-
+            <div> tesr</div>
             <div class="section-title">
                 <h2>Teams</h2>
                 <p>Check our Team</p>
