--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -253,7 +253,7 @@
         <div class="container" data-aos="fade-up">
             <div> tesr</div>
             <div class="section-title">
-                <h2>Teams</h2>
+                <h2>Teams Index</h2>
                 <p>Check our Team</p>
             </div>
 
