Line  no 49 Index Page

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -46,7 +46,7 @@
                             <div class="count-box">
                                 <i class="bi bi-emoji-smile"></i>
                                 <span data-purecounter-start="0" data-purecounter-end="125" data-purecounter-duration="1" class="purecounter"></span>
-                                <p>Happy Clients</p>
+                                <p>Happy Clients Faces(Pooja)</p>
                             </div>
                         </div>
                         @*<div class="col-lg-3 col-md-5 col-6 d-md-flex align-items-md-stretch">
